# LMindAgent

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  doc_worker.py  docker-compose.yml  evaluation_worker.py  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/agents/: agent.py
backend/app/agents/history/: cache.py  search.py
backend/app/agents/prompts/: evaluation_prompt.py  prompt.py  query_prompt.py
backend/app/agents/tools/: call_mcp_tool.py  knowledge_base.py  weather.py  web_search.py
backend/app/agents/workflows/: qa_graph_workflow.py  qa_workflow.py  research_workflow.py  summarize_workflow.py
backend/app/api/: deps.py  routes.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  documents.py  evaluation.py  files.py  home.py  knowledge_bases.py  mcp.py  model_configs.py  notes.py  tasks.py  users.py
backend/app/core/: config.py  errors.py  events.py  log.py  log_instance.py  rank.py  security.py
backend/app/db/: session.py
backend/app/db/redis_db/: __init__.py  base.py  cache.py  client.py  lock.py  pubsub.py  queue.py  serializer.py
backend/app/db/repositories/: _base.py  chunk_repository.py  conversation_repository.py  document_repository.py  evaluation_group_repository.py  evaluation_question_repository.py  evaluation_run_repository.py  evaluation_task_repository.py  knowledge_base_repository.py  mcp_repository.py  message_repository.py  model_config_repository.py  note_repository.py  task_repository.py  user_repository.py
backend/app/integrations/: embedding_provider.py  llm_provider.py  model_config_provider.py
backend/app/middleware/: access_log.py  request_id.py
backend/app/models/: __init__.py  base.py  conversation.py  document.py  document_chunk.py  evaluation.py  knowledge_base.py  mcp.py  message.py  message_tools.py  model_config.py  note.py  task.py  user.py
backend/app/rag/: _query.py  citation.py  clean_text.py  embeddings.py  loader.py  re_ranker.py  retriever.py  splitter.py
backend/app/schemas/: chat.py  document.py  evaluation.py  knowledge_base.py  mcp.py  model_config.py  note.py  task.py  user.py
backend/app/services/: chat_service.py  document_service.py  evaluation_service.py  file_service.py  home_service.py  ingestion_service.py  knowledge_base_service.py  mcp_service.py  mcp_tool_service.py  model_config_service.py  note_service.py  task_service.py
backend/app/storage/: file_storage.py  local_storage.py
backend/app/tests/: embeddings_test.py  load_split_test.py  reranker_test.py  stream_res_data.py  test_aes.py  test_import.py  test_redis.py
backend/app/utils/: format_number.py  generate_id.py  time_.py
backend/app/workers/: document_consumer.py  evaluation_consumer.py
backend/app/workers/handlers/: document_handle.py  evaluation_handle.py
backend/scripts/: generate_aes.py  generate_jwt.py
docs/: backend_architecture_design.md  frontend_architecture_design.md  personal_knowledge_agent_ui.html
frontend/: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/ThemeToggle/: ThemeToggle.module.css  ThemeToggle.tsx
frontend/src/components/Toast/: ToastProvider.module.css  ToastProvider.tsx
frontend/src/context/: AntdConfig.tsx  ThemeContext.tsx
frontend/src/features/auth/: api.ts  store.ts  types.ts
frontend/src/features/chat/: api.ts
frontend/src/features/documents/: api.ts  types.ts
frontend/src/features/evaluation/: api.ts  types.ts
frontend/src/features/knowledge-bases/: api.ts  types.ts
frontend/src/features/notes/: api.ts
frontend/src/features/overview/: api.ts  types.ts
frontend/src/features/settings/: api.ts  store.ts  types.ts
frontend/src/features/tasks/: api.ts  types.ts
frontend/src/layouts/AgentComposer/: AgentComposer.module.css  AgentComposer.tsx
frontend/src/layouts/ContextPanel/: ContextPanel.module.css  ContextPanel.tsx
frontend/src/layouts/Sidebar/: Sidebar.module.css  Sidebar.tsx
frontend/src/layouts/Topbar/: Topbar.module.css  Topbar.tsx
frontend/src/layouts/WorkspaceLayout/: WorkspaceLayout.module.css  WorkspaceLayout.tsx
frontend/src/lib/: apiClient.ts  dateTime.ts  fileUpload.ts  sourceColor.ts
frontend/src/pages/ChatPage/: ChatPage.module.css  ChatPage.module.css.bak  ChatPage.tsx  ChatPage.tsx.bak
frontend/src/pages/DashboardPage/: DashboardPage.module.css  DashboardPage.tsx
frontend/src/pages/DocumentDetailPage/: DocumentDetailPage.module.css  DocumentDetailPage.tsx
frontend/src/pages/DocumentsPage/: DocumentsPage.module.css  DocumentsPage.tsx
frontend/src/pages/EvaluationPage/: EvaluationGroupsPage.tsx  EvaluationPage.module.css  EvaluationPage.tsx  EvaluationQuestionsPage.tsx  EvaluationResultsPage.tsx  EvaluationRunsPage.tsx  EvaluationTasksPage.tsx  QuestionFormModals.tsx  evaluationShared.tsx
frontend/src/pages/Knowledge/: Knowledge.module.css  Knowledge.tsx
frontend/src/pages/Login/: Login.module.css  Login.tsx  Register.module.css  Register.tsx
frontend/src/pages/NotFoundPage/: NotFoundPage.tsx
frontend/src/pages/NotesPage/: NotesPage.module.css  NotesPage.tsx
frontend/src/pages/RouteErrorPage/: RouteErrorPage.tsx
frontend/src/pages/SettingsPage/: SettingsPage.module.css  SettingsPage.tsx
frontend/src/pages/TaskDetailPage/: TaskDetailPage.module.css  TaskDetailPage.tsx
frontend/src/pages/TasksPage/: TasksPage.module.css  TasksPage.tsx
frontend/src/router/: nav.tsx  router.tsx
frontend/src/styles/: globals.css  tokens.css  ui.module.css
