[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "aiosqlite==0.22.1",
    "asyncpg==0.31.0",
    "cryptography==48.0.0",
    "fastapi==0.136.3",
    "flagembedding==1.4.0",
    "langchain==1.3.2",
    "langchain-community==0.4.2",
    "langchain-core==1.4.0",
    "langchain-experimental==0.4.2",
    "langchain-openai==1.2.2",
    "langchain-text-splitters==1.1.2",
    "loguru==0.7.3",
    "openai==2.38.0",
    "pgvector==0.4.2",
    "psycopg[binary]==3.3.4",
    "pycryptodome==3.23.0",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.1",
    "pypdf==6.12.2",
    "python-multipart==0.0.29",
    "redis==8.0.0",
    "sentence-transformers==2.7.0",
    "sqlalchemy==2.0.50",
    "torch==2.12.0",
    "transformers==4.45.2",
    "uvicorn[standard]==0.48.0",
    "accelerate==1.13.0",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "beautifulsoup4==4.14.3",
    "cbor==1.0.0",
    "certifi==2026.5.20",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cuda-bindings==13.3.1 ; sys_platform == 'linux'",
    "cuda-pathfinder==1.5.5 ; sys_platform == 'linux'",
    "cuda-toolkit==13.0.2 ; sys_platform == 'linux'",
    "datasets==4.8.5",
    "dill==0.4.1",
    "distro==1.9.0",
    "filelock==3.29.0",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "greenlet==3.5.1 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
    "h11==0.16.0",
    "hf-xet==1.5.0 ; platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'arm64' or platform_machine == 'x86_64'",
    "httpcore==1.0.9",
    "httptools==0.8.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==0.36.2",
    "idna==3.17",
    "ijson==3.5.0",
    "inscriptis==2.7.1",
    "ir-datasets==0.5.11",
    "jinja2==3.1.6",
    "jiter==0.15.0",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain-classic==1.0.7",
    "langchain-protocol==0.0.16",
    "langgraph==1.2.2",
    "langgraph-checkpoint==4.1.1",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.3.15",
    "langsmith==0.8.7",
    "lxml==6.0.4",
    "lz4==4.4.5",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "nvidia-cublas==13.1.1.3 ; sys_platform == 'linux'",
    "nvidia-cuda-cupti==13.0.85 ; sys_platform == 'linux'",
    "nvidia-cuda-nvrtc==13.0.88 ; sys_platform == 'linux'",
    "nvidia-cuda-runtime==13.0.96 ; sys_platform == 'linux'",
    "nvidia-cudnn-cu13==9.20.0.48 ; sys_platform == 'linux'",
    "nvidia-cufft==12.0.0.61 ; sys_platform == 'linux'",
    "nvidia-cufile==1.15.1.6 ; sys_platform == 'linux'",
    "nvidia-curand==10.4.0.35 ; sys_platform == 'linux'",
    "nvidia-cusolver==12.0.4.66 ; sys_platform == 'linux'",
    "nvidia-cusparse==12.6.3.3 ; sys_platform == 'linux'",
    "nvidia-cusparselt-cu13==0.8.1 ; sys_platform == 'linux'",
    "nvidia-nccl-cu13==2.29.7 ; sys_platform == 'linux'",
    "nvidia-nvjitlink==13.0.88 ; sys_platform == 'linux'",
    "nvidia-nvshmem-cu13==3.4.5 ; sys_platform == 'linux'",
    "nvidia-nvtx==13.0.85 ; sys_platform == 'linux'",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "pandas==3.0.3",
    "peft==0.19.1",
    "pillow==12.2.0",
    "propcache==0.5.2",
    "protobuf==7.35.0",
    "psutil==7.2.2",
    "psycopg-binary==3.3.4 ; implementation_name != 'pypy'",
    "pyarrow==24.0.0",
    "pycparser==3.0 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pydantic-core==2.46.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "setuptools==81.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.4",
    "starlette==1.2.0",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "tiktoken==0.13.0",
    "tokenizers==0.20.3",
    "tqdm==4.67.3",
    "trec-car-tools==2.6",
    "triton==3.7.0 ; sys_platform == 'linux'",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2 ; sys_platform == 'emscripten' or sys_platform == 'win32'",
    "unlzw3==0.2.3",
    "urllib3==2.7.0",
    "uuid-utils==0.16.0",
    "uvloop==0.22.1 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "warc3-wet==0.2.5",
    "warc3-wet-clueweb09==0.2.5",
    "watchfiles==1.2.0",
    "websockets==16.0",
    "win32-setctime==1.2.0 ; sys_platform == 'win32'",
    "xxhash==3.7.0",
    "yarl==1.24.2",
    "zlib-state==0.1.12",
    "zstandard==0.25.0",
    "pyjwt>=2.13.0",
    "snowflake-id>=1.0.2",
    "unstructured>=0.22.31",
    "python-docx>=1.2.0",
    "pymupdf>=1.27.2.3",
    "pdfplumber>=0.11.9",
    "rapidocr>=3.8.1",
    "onnxruntime>=1.26.0",
    "chardet>=7.4.3",
    "langchain-deepseek>=1.1.0",
    "jieba>=0.42.1",
    "markdown>=3.10.2",
    "alembic>=1.18.5",
]
